# aelita

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
api/: .dockerignore  Cargo.toml  Dockerfile  wait-for-diesel-setup.sh
api/migrations/2020-10-01-223911_cases_and_events/: down.sql
api/src/: main.rs  models.rs
frontend/: .dockerignore  Dockerfile  README.md  case.html  cases.html  hello.html  package-lock.json  package.json
migrations/2020-10-01-223911_cases_and_events/: up.sql
src/: cases.rs  main.rs  schema.rs
templates/: case.html  hello.html
