[package]
name = "aelita"
version = "0.1.0"
authors = ["jondea <jondea@thedeakin.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
askama = { version = "0.10", features = ["with-rocket", "mime", "mime_guess"] }
askama_rocket = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.4", features = ["postgres","serde_json","uuid"] }
dotenv = "0.15.0"
uuid = { version = "0.6", features = ["serde", "v4"] }
